# Scanalyzer

./: .gitignore  README.md  Scanalyzer.bat  Scanalyzer.code-workspace  Scanalyzer.py  Scanalyzer.spec  Scanalyzer_app.py  Scanalyzer_app.spec  Scanalyzer_app_backup_20251010_000000.py  Spectralyzer.py  Tests.ipynb  config.yaml  main.py  pyproject.toml
Scanalyzer/: __init__.py  config.yml  dummy_scan.sxm  file_functions.py  functions.py  image_functions.py
Scanalyzer/__pycache__/: image_functions.py
lib/: Scanalyzer.code-workspace  Spectralyzer.py  __init__.py  data_processing.py  file_functions.py  gui_functions.py  gui_items.py  gui_scanalyzer.py  gui_spectralyzer.py  image_functions.py  spectrum_viewer.py  st_widgets.py
sys/: config.yml
